<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_podcasts">

    <fragment
        android:id="@+id/nav_top_10"
        android:name="com.girltalkradio.ui.top10.Top10Fragment"
        android:label="@string/menu_top_10"
        tools:layout="@layout/fragment_top_10" />
        
    <fragment
        android:id="@+id/nav_podcasts"
        android:name="com.girltalkradio.ui.podcasts.PodcastsFragment"
        android:label="@string/menu_podcast_page"
        tools:layout="@layout/fragment_podcasts" />

    <fragment
        android:id="@+id/nav_multimedia"
        android:name="com.girltalkradio.ui.multimedia.MultimediaFragment"
        android:label="@string/menu_multimedia"
        tools:layout="@layout/fragment_multimedia" />

</navigation>